test_regress/t/t_assert_seq_event_unsup.out
%Error-UNSUPPORTED: t/t_assert_seq_event_unsup.v:28:6: Unsupported: '@' event control on a sequence without a clocking event
   28 |     @s_clockless;
      |      ^~~~~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_assert_seq_event_unsup.v:19:5: Unsupported: non-edge clocking event on a sequence; use an edge such as @(posedge clk)
   19 |     @(g) a ##1 b;
      |     ^
%Error-UNSUPPORTED: t/t_assert_seq_event_unsup.v:30:6: Unsupported: this sequence form referenced by an '@' event control
   30 |     @s_noncons;
      |      ^~~~~~~~~
%Error: Exiting due to
